--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.2",
     "xlsx": "^0.18.5"
   },
@@ -28,6 +29,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gcloud app deploy"
+  },
+  "engines": {
+    "node": ">=18 <20"
   },
   "eslintConfig": {
     "extends": [
