--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_CONTACT_API=https://mld.ng/api/api/v1/contact-requests
+REACT_APP_CONTACT_API=http://localhost:5000/api/save-data
 REACT_APP_DEMO_REQUEST_API=https://mld.ng/api/api/v1/demo-requests
