--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://ssitechsolution.tech",
   "dependencies": {
+    "@google-cloud/storage": "^7.15.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,7 @@
     "body-parser": "^1.20.3",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "notiflix": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
