--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
@@ -26,7 +27,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
