--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -55,9 +55,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "tailwindcss": "^3.0.7"
   }
 }
