--- a/client/app.yaml
+++ b/client/app.yaml
@@ -5,6 +5,10 @@ env_variables:
   REACT_APP_API_URL: "https://www.ssitechsolution.tech/api/save-data"
 
 handlers:
+  - url: /static
+    static_files: build/static
+    upload: build/static/(.*)
+
   - url: /
     static_files: build/index.html
     upload: build/index.html
