--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": "https://ssitechsolution.tech",
   "dependencies": {
-
     "notiflix": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -14,7 +13,9 @@
     "react-transition-group": "^4.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "aos": "^2.3.1",
+    "axios": "^0.21.1"
   },
   "scripts": {
     "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
