--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "notiflix": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
@@ -22,8 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gcloud app deploy"
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": ">=18 <20"
