--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ReactApp",
-  "name": "React Application",
+  "short_name": "ChatWhole",
+  "name": "ChatWhole - Data Engineering and Data Science Solutions",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,19 +8,19 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logo192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "logo512.png",
+      "src": "logo512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ],
   "start_url": ".",
   "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#000000",
-  "description": "A simple React app"
+  "description": "ChatWhole offers expert data engineering and data science services to help your business leverage data for growth and innovation."
 }
