--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "aos": "^2.3.1",
     "axios": "^0.21.1",
     "firebase": "^9.23.0",
+    "framer-motion": "^12.23.2",
     "notiflix": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
