--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,14 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
+    "sitemap": "^8.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.2",
     "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && node scripts/generate-sitemap.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
