--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "ChatWhole - Data Engineering and Data Science Solutions",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "chatwhole.ico",
       "sizes": "16x16 32x32 48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.jpg",
+      "src": "chatwhole192.jpg",
       "sizes": "192x192",
       "type": "image/jpg"
     },
     {
-      "src": "logo512.jpg",
+      "src": "chatwhole512.jpg",
       "sizes": "512x512",
       "type": "image/jpg"
     }
